PHOENIX-1317 Change scope of hbase-test-util artifact to test for pig and flume modules

--- a/phoenix-flume/pom.xml
+++ b/phoenix-flume/pom.xml
@@ -113,6 +113,7 @@
           <groupId>org.apache.hbase</groupId>
           <artifactId>hbase-testing-util</artifactId>
           <version>${hbase-hadoop1.version}</version>
+          <scope>test</scope>
           <exclusions>
             <exclusion>
               <groupId>org.jruby</groupId>
@@ -199,6 +200,7 @@
           <groupId>org.apache.hbase</groupId>
           <artifactId>hbase-testing-util</artifactId>
           <version>${hbase-hadoop2.version}</version>
+          <scope>test</scope>
           <exclusions>
             <exclusion>
               <groupId>org.jruby</groupId>
