--- a/phoenix-pig/pom.xml
+++ b/phoenix-pig/pom.xml
@@ -90,6 +90,7 @@
           <groupId>org.apache.hbase</groupId>
           <artifactId>hbase-testing-util</artifactId>
           <version>${hbase-hadoop1.version}</version>
+          <scope>test</scope>
           <exclusions>
             <exclusion>
               <groupId>org.jruby</groupId>
@@ -181,6 +182,7 @@
           <groupId>org.apache.hbase</groupId>
           <artifactId>hbase-testing-util</artifactId>
           <version>${hbase-hadoop2.version}</version>
+          <scope>test</scope>
           <exclusions>
             <exclusion>
               <groupId>org.jruby</groupId>
