--- a/phoenix-hadoop2-compat/pom.xml
+++ b/phoenix-hadoop2-compat/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.apache.phoenix</groupId>
     <artifactId>phoenix</artifactId>
-    <version>4.1.0</version>
+    <version>4.1.0-p1</version>
   </parent>
   <artifactId>phoenix-hadoop2-compat</artifactId>
   <name>Phoenix Hadoop2 Compatibility</name>
